examples/test/testpolicy13225.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13225
  namespace: namespace69
spec:
  podSelector:
    matchLabels:
      key35: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value42
      podSelector:
        matchLabels:
          key1: value34
          key18: value15
          key12: value28
